--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,7 @@ cmds = ["npm install"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "NODE_ENV=production npm start"
+
+[nixpacks]
+framework = "nextjs"
