--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "drop_analyzer_frontend",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    ".",
+    "worker"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:worker": "opennextjs-cloudflare",
+    "preview": "opennextjs-cloudflare && wrangler dev",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -73,5 +80,6 @@
     "turbo": "^2.3.3",
     "typescript": "^5",
     "wrangler": "^3.102.0"
-  }
+  },
+  "packageManager": "pnpm@10.0.0-rc.2+sha512.b6e59b96f90ca92449ac2f6dca9b430880448fc97d21f0fa9200e3d5ddb5289ad535255400554f7f3486e2d60058492161aaa9b58828e81f50c096718be9d156"
 }
