--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://okw04g0os0cocooowskcwg4s.alettidesign.ru/api/v1
+NEXT_PUBLIC_API_URL=https://okw04g0os0cocooowskcwg4s.alettidesign.ru/api/v1/analysis
