--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-NEXT_PUBLIC_API_URL=https://okw04g0os0cocooowskcwg4s.alettidesign.ru/api/v1/analysis
+# Переменные окружения для проекта
+# Создайте файл .env.local на основе этого шаблона
+
+# URL API сервера
+NEXT_PUBLIC_API_URL=http://45.155.207.218:8012
+
+# Режим разработки
+NODE_ENV=development
+
+# Порт для запуска приложения
+PORT=3090
