--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/lib-storage": "^3.817.0",
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
@@ -48,12 +50,12 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "caniuse-lite": "1.0.30001281",
-    "framer-motion": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^10.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
     "next": "15.1.4",
@@ -73,14 +75,14 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
     "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^0.3.8",
-    "@types/node": "^20",
+    "@types/node": "^20.17.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "turbo": "^2.3.3",
     "typescript": "^5",
     "wrangler": "^3.102.0"
